--- a/guided_proj_business_qs_sql.Rmd
+++ b/guided_proj_business_qs_sql.Rmd
@@ -313,7 +313,7 @@ order_val
 # Conclusion
 The USA is the biggest market, largely because it has the most customers, as these customers are not the biggest spenders. The data shows that the biggest spenders are in the Czech Republic, where both the average value of sales per customer and the average order value are highest despite it having one of the smallest numbers of customers (though note that the average order value varies relatively little between countries so it might not be the most meaningful metric). 
 
-Based on this data, the Czech Republic seems like a market with potential for growth. Perhaps other countries with few customers but relatively high average sales values per customer and/or order vales (e.g., Portugal, India, United Kingdom) might also be candidates for potential growth, but generally it would be helpful to have more detailed data on customers and their behaviour (e.g., historical changes, demographics) in order to be able to make better recommendations. 
+Based on this data, the Czech Republic seems like a market with potential for growth. Perhaps other countries with few customers but relatively high average sales values per customer and/or order vales, as well as large populations with access to the internet (e.g., Portugal, India, United Kingdom) might also be candidates for potential growth, but generally it would be helpful to have more detailed data on customers and their behaviour (e.g., historical changes, demographics) in order to be able to make better recommendations. 
 
 # Should the store continue to buy full albums from record labels?
 ## 1. Find out how many sales were for full albums versus individual tracks
@@ -382,14 +382,13 @@ pie(albums_vs_ind$percent, labels = c("tracks", "albums"), border = "white", col
 ## Conclusion: 
 Whole albums represent approximately 20% of all sales, which is a large proportion. It doesn't make sense to change strategy and focus on buying individual popular tracks. 
 
-# Bonus questions:
+# "Bonus" questions:
 1. which artist is used the most in playlists?
 2. How many tracks have been purchased vs not purchased?
 3. Does the range of tracks in the store reflect their sales popularity?
 4. Do protected vs non-protected media types have an effect on popularity?
-5. any other possible business question.
 
-# Some aspects of music popularity
+
 ## 1. Which artist features most often in playlists?
 There are two ways we could define "most often" here - artists with the most tracks contained in playlists, and artists who have at least 1 track in the most playlists. Data for both definitions is gathered here:
 ```{sql, connection=conn, output.var="artist_pop"}
@@ -428,6 +427,11 @@ ORDER BY n_tracks DESC;
 
 ```
 
+```{r display poptab}
+head(artist_pop)
+```
+
+
 ```{r plot artist pop 1, message=FALSE, warning=FALSE}
 artist_top10_tracks <- artist_pop %>% slice_max(order_by = n_tracks, with_ties = TRUE, n = 10)
 
@@ -453,9 +457,218 @@ play <- ggplot(data = artist_top10_play, aes(x = reorder(artist_name, n_playlist
 
 play
 ```
-Note that the list of "Top 10" artists in terms of the number of playlists they feature in is much longer than just 10. This is because I chose to allow ties when slicing the data - you can see on the graph that most of the artists feature in exactly the same number of playlists. Using `n_tracks` as a secondary ordering variable would not have been useful as there are also lots of ties in this variable. 
+Note that the list of "Top 10" artists in terms of the number of playlists they feature in is much longer than just 10. This is because I chose to allow ties when slicing the data - you can see on the graph that most of the artists feature in exactly the same number of playlists. Using `n_tracks` as a secondary ordering variable would not have been useful as there are also lots of ties there. 
 
 ## Conclusion:
 Most of the top 10 artists in terms of number of tracks featured in playlists are Rock and Metal artists, while most of those whose popularity is defined as the number of playlists they feature in make classical music. The most popular artist is therefore either Iron Maiden or Eugene Ormandy. 
 
 ## 2. How many tracks have been purchased vs not purchased?
+```{sql, connection=conn, output.var="tracks_purchased"}
+WITH purchased_tracks AS (
+    SELECT 
+        i.invoice_id AS invoice_id,
+        il.track_id AS track_id
+    FROM invoice AS i
+    INNER JOIN invoice_line AS il
+    )
+    
+SELECT 
+   COUNT(DISTINCT t.track_id) AS n_tracks_total,
+   COUNT(DISTINCT pt.track_id) AS n_tracks_purchased,
+   CAST(COUNT(DISTINCT pt.track_id) AS FLOAT)/(COUNT(DISTINCT t.track_id)) AS prop_purchased
+FROM track AS t
+LEFT JOIN purchased_tracks AS pt ON pt.track_id = t.track_id;
+
+```
+
+```{r display tab}
+tracks_purchased
+
+```
+1806 of the 3503 available tracks were purchased, or about 50%. This seems like a relatively low proportion, which may indicate that the range of tracks the store has available doesn't reflect their relative popularity as well as it could. This leads us to the next question:
+
+## 3. Does the range of tracks in the store reflect their sales popularity?
+```{sql, connection=conn, output.var="track_pop_range"}
+WITH track_range AS (
+    SELECT
+        g.*,
+        t.track_id AS track_id,
+        t.genre_id AS genre_id
+    FROM genre AS g
+    INNER JOIN track AS t ON g.genre_id = t.genre_id
+    ),
+    sold_range AS (
+    SELECT
+        t.genre_id AS genre_id,
+        il.track_id AS track_id,
+        i.invoice_id As invoice_id
+    FROM invoice_line AS il
+    INNER JOIN track AS t ON t.track_id = il.track_id
+    INNER JOIN invoice AS i ON i.invoice_id = il.invoice_id
+    )
+
+SELECT 
+    tr.name,
+    COUNT(DISTINCT tr.track_id) AS n_tracks,
+    COUNT(DISTINCT sr.track_id) AS n_sold,
+    RANK () OVER ( 
+		ORDER BY COUNT(DISTINCT tr.track_id) DESC
+		) AS tot_rank,
+		RANK () OVER ( 
+		ORDER BY COUNT(DISTINCT sr.track_id) DESC
+		) AS sold_rank,
+		CAST(COUNT(DISTINCT sr.track_id) AS FLOAT)/COUNT(DISTINCT tr.track_id) AS prop_sold
+FROM track_range AS tr
+LEFT JOIN sold_range AS sr ON sr.genre_id = tr.genre_id
+GROUP BY 1
+ORDER BY sold_rank;
+
+```
+
+```{r display pop range}
+track_pop_range_long <- track_pop_range %>% select(c(1:3)) %>% pivot_longer(cols = c(n_tracks, n_sold), names_to = "type", values_to = "n")
+
+track_pop_range
+```
+
+```{r plot pop, message=FALSE, warning=FALSE}
+pop_range <- ggplot(data = track_pop_range_long, aes(x = reorder(name, n), y = n, fill = type)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  coord_flip() +
+  xlab("Genre") +
+  ylab("Number of tracks")
+
+pop_range
+
+```
+```{r plot prop_sold, message=FALSE, warning=FALSE}
+pop_range <- ggplot(data = track_pop_range, aes(x = reorder(name, prop_sold), y = prop_sold, fill = name)) +
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  xlab("Genre") +
+  ylab("Percent available tracks sold") +
+  scale_y_continuous(labels = scales::percent) +
+  theme(legend.position = "none")
+
+pop_range
+
+```
+
+## Conclusion:
+We can see from the first plot that, in terms of the number of tracks available in the store, the range looks mostly representative of each genre's popularity (defined as the number of sales), with a few exceptions. For example, there are many more Latin tracks than are actually sold. 
+
+Another way to represent how well the number of tracks matches each genre's popularity could be to consider the proportion of tracks sold for each genre. Selections with a higher proportion of tracks sold are more likely to be representative of their genre's popularity since they don't have too many extra (unsold) tracks, while those with lower proportions of tracks sold are less so. However, having a very high percentage of tracks sold can also indicate that there are very few tracks available, or that there may be a higher demand for the genre in question (there aren't enough extra tracks). 
+
+We can compare the number of tracks available to the number of tracks sold to see if it's the first possibility, but other data like historical data on customers' purchasing patterns for each genre would be needed to look into the second possibility. It would also be useful to survey customers, e.g., to find out whether they wish there were more tracks for certain genres.
+
+## 4. Does media type (protected vs non-protected) have an effect on popularity?
+We will define popularity as the number of sales. Let's break down the number of sales between these two media types:
+```{sql, connection=conn, output.var="media_type_effect"}
+WITH track_info AS (
+     SELECT 
+          t.track_id AS track_id,
+          t.genre_id AS genre_id,
+          g.name AS genre,
+          t.media_type_id AS media_type_id,
+          m.name AS media_type
+    FROM track AS t
+    INNER JOIN genre AS g ON g.genre_id = t.genre_id
+    INNER JOIN media_type AS m ON m.media_type_id = t.media_type_id
+    ),
+    
+    sold_tracks AS (
+    SELECT
+        t.track_id AS track_id,
+        il.invoice_id AS invoice_id
+    FROM invoice_line AS il
+    INNER JOIN track AS t ON t.track_id = il.track_id
+    )
+    
+SELECT 
+  ti.media_type AS media_type,
+  COUNT(st.track_id) AS n_sold,
+  CASE 
+    WHEN ti.media_type LIKE "%protected%" THEN "protected"
+    ELSE "non-protected"
+  END AS cat
+FROM track_info AS ti
+INNER JOIN sold_tracks AS st ON st.track_id = ti.track_id
+GROUP BY media_type
+ORDER BY n_sold DESC;
+  
+```
+
+```{r, display effect media type}
+media_type_effect
+
+```
+
+Plot the resulting data:
+```{r, plot media type effect, message=FALSE, warning=FALSE}
+
+type <- ggplot(data = media_type_effect, aes(x = reorder(cat, -n_sold), y = n_sold)) +
+  geom_bar(stat = "identity", fill = "darkviolet") +
+  xlab("Media type") +
+  ylab("Number of tracks sold")
+
+type
+```
+We can see that most sold tracks are in a non-protected format. However, this can't tell us whether the media type actually *affects* track popularity. We could also see from the table that there are 5 media subtypes, of which MPEG audio files (a non-protected type) are by far the most widespread, so this pattern could just be due to the prevalence of this one format instead of the protected status having an effect on its own. 
+
+Based on this summary, we can't say for sure whether the protected status of the media files has a big effect on sales popularity. To do that, we need to use statistical methods, like regression. This will allow us to quantify how well media type predicts track popularity. 
+
+To use a regression, we need more detailed data than is in the previous table: 
+```{sql, connection=conn, output.var="media_type_detailed"}
+
+WITH tracks_info AS (    
+    SELECT 
+          t.track_id AS track_id,
+          g.name AS genre,
+          m.name AS media_type,
+          CASE 
+            WHEN m.name LIKE "%protected%" THEN "protected"
+            ELSE "non-protected"
+          END AS cat
+    FROM track AS t
+    INNER JOIN genre AS g ON g.genre_id = t.genre_id
+    INNER JOIN media_type AS m ON m.media_type_id = t.media_type_id
+    )
+    
+SELECT
+    ti.*,
+    CASE
+      WHEN il.track_id = ti.track_id THEN 1
+      ELSE 0
+     END AS sold
+FROM tracks_info AS ti
+LEFT JOIN invoice_line AS il ON il.track_id = ti.track_id
+GROUP BY 1;
+
+```
+
+```{r display detailed media type}
+head(media_type_detailed)
+```
+The dependent variable is `sold`, a dichotomous (binary) variable, so logistic regression is the best kind of statistical model for this data. 
+
+```{r logistic regression}
+library(stats)
+library(sjPlot)
+
+t1 <- glm(data = media_type_detailed, sold ~ cat, family = "binomial")
+summary(t1)
+
+t2 <- glm(data = media_type_detailed, sold ~ cat + media_type, family = "binomial")
+summary(t2)
+
+anova(t1, t2, test = "Chisq") # does t1 fit significantly better than t2?
+
+tab_model(t2)
+
+```
+Note: the warning we get with the best-fitting model (which includes both general media type, and media sub-type as predictors) means that there was not enough data corresponding to `Protected MPEG-4 video file` to evaluate how well this sub-type predicted the relative odds of a track being sold. 
+
+This makes sense, because only 3 such tracks were sold. This is only a toy example so I will leave it at that as this does not affect the general fit of the model per se (though it does make it less likely to perform well as a predictive model for new data). Otherwise it would be a good idea to try using an *exact* logistic regression, which works better than regular logistic regression when sample sizes are small and/or some cells have no observations. 
+
+## Conclusion:
+Our model indicates that media type does affect whether a track gets sold (protected media types get sold less), but the sub-types have very little effect on track popularity (the protected AAC type seems to increase the odds of a track being sold, but this may not be a reliable estimate given that the model is rank-deficient due to insufficient data). Non-protected media types are therefore more popular.
