--- a/SQL/dataquest_SQLite.Rmd
+++ b/SQL/dataquest_SQLite.Rmd
@@ -2,7 +2,8 @@
 title: "Guided Project: Answering Business Questions with RSQLite"
 output: html_notebook
 ---
-
+First, the setup.
+Connect to Chinook database:
 ```{r}
 library(RSQLite)
 library(DBI)
@@ -12,7 +13,7 @@ conn <- dbConnect(SQLite(), db)
 tables <- dbListTables(conn)
 
 ```
-Make helper functions:
+Make helper functions and display a list of tables contained in the database:
 ```{r helper}
 run_query <- function(query) {
   conn <- dbConnect(SQLite(), db)
@@ -29,7 +30,10 @@ show_tables <- function(){
 show_tables()
 
 ```
-Set theme for plots:
+Here is the relational schema for this database: 
+![(Source: Dataquest exercise instructions)](../chinook_RS.png)
+
+Next, set theme for plots:
 ```{r}
 library(ggplot2)
 my_theme <- theme(axis.line.x.bottom = element_line(size = 0.25),
@@ -96,9 +100,9 @@ WITH usa_sales AS
    )
 SELECT
     g.name AS genre,
-    count(us.invoice_line_id) AS tracks_sold,
-    cast(count(us.invoice_line_id) AS FLOAT)/(
-        SELECT COUNT(*) from usa_sales
+    COUNT(us.invoice_line_id) AS tracks_sold,
+    CAST(COUNT(us.invoice_line_id) AS FLOAT)/(
+        SELECT COUNT(*) FROM usa_sales
     ) AS percentage_tracks_sold
 FROM usa_sales AS us
 INNER JOIN track AS t ON t.track_id = us.track_id
@@ -115,7 +119,7 @@ library(ggplot2)
 
 top_genres_plot <- ggplot(data = top_10_sales, aes(x = reorder(genre, -percentage_tracks_sold), y = percentage_tracks_sold)) +
   geom_bar(stat = "identity", fill = "orange") +
-  xlab("Genre") +
+  xlab("") +
   ylab("Percent of total tracks sold in USA") +
   scale_y_continuous(labels=scales::percent) +
   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
@@ -127,9 +131,9 @@ top_genres_plot
 It seems that Rock, Alternative & Punk, and Metal are the 3 top-selling music genres in the USA, so we should include the Punk album by Red Tone. However, we don't have any new Rock or Metal albums available, so we should choose the next best genres: Blues and Pop. 
 
 In sum, the following three albums will be recommended:
-- Red Tone (Punk)
-- Slim Jim Bites (Blues)
-- Meteor and the Girls (Pop).
+* Red Tone (Punk)
+* Slim Jim Bites (Blues)
+* Meteor and the Girls (Pop).
 
 It would be worth asking the record label if they have any new Rock albums, because this genre is overwhelmingly the bestseller.
 
@@ -168,7 +172,7 @@ e_perf_plot <- ggplot(data = employee_perf, aes(x = reorder(employee, -total_sol
                        
 e_perf_plot                        
 ```
-Jane Peacock has the highest sales amount among the Sales Support Reps. Most of the available employee characteristics are the same between each of the reps, except for date of hire and birthdate. It's unlikely that age has a big impact on their sales, but more experienced employees may sell more due to various factors like increased skill or rapport with clients. 
+Jane Peacock has the highest sales amount among the Sales Support Reps. Most of the available employee characteristics are the same between each of the reps, except for date of hire and birth date. It's unlikely that age has a big impact on their sales, but more experienced employees may sell more due to various factors like increased skill or rapport with clients. 
 Let's visualize how long each employee has been with the company:
 
 ```{r plot employee time since hire, message=FALSE, warning=FALSE}
@@ -186,7 +190,7 @@ hire_timeline <- employee_perf %>%
 plot_time <- ggplot(data = hire_timeline, aes(x = reorder(employee, time_since_hire), y = time_since_hire)) +
   geom_bar(stat = "identity", fill = "sienna1") +
   coord_flip() +
-  xlab("Sales Support Rep") +
+  xlab("") +
   ylab("Time since hire (days)") +
   theme(axis.text.y = element_text(angle = 0))
 plot_time
@@ -197,7 +201,7 @@ Let's also look at their respective ages, keeping in mind that we don't know eno
 age_plot <- ggplot(data = hire_timeline, aes(x = reorder(employee, age), y = age)) +
   geom_bar(stat = "identity", fill = "lightgoldenrod2") +
   coord_flip() +
-  xlab("Sales Support Rep") +
+  xlab("") +
   ylab("Age (years)") +
   theme(axis.text.y = element_text(angle = 0))
 age_plot
@@ -267,7 +271,7 @@ sales_bycountry_cut <-  sales_bycountry %>% filter(country != "Other")
 
 cust <- ggplot(data = sales_bycountry_cut, aes(x = reorder(country, -customers), y = customers, fill = country)) +
   geom_bar(stat = "identity") + 
-  xlab("Country") +
+  xlab("") +
   ylab("Number of customers") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
         legend.position = "none")
@@ -280,7 +284,7 @@ Total sales by country (again excluding "Other"):
 ```{r plot sales by country, message=FALSE, warning=FALSE}
 tot_sold <- ggplot(data = sales_bycountry_cut, aes(x = reorder(country, -total_sales), y = total_sales, fill = country)) +
   geom_bar(stat = "identity") +
-  xlab("Country") +
+  xlab("") +
   ylab("Total sales ($)") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
         legend.position = "none")
@@ -291,7 +295,7 @@ Average sales per customer:
 ```{r plot avg sales per c, message=FALSE, warning=FALSE}
 sales_per_c <- ggplot(data = sales_bycountry_cut, aes(x = reorder(country, -average_sales_per_c), y = average_sales_per_c, fill = country)) +
   geom_bar(stat = "identity") +
-  xlab("Country") +
+  xlab("") +
   ylab("Average value of sales per customer ($)") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
         legend.position = "none")
@@ -302,7 +306,7 @@ Average order value by country:
 ```{r plot avg order val, message=FALSE, warning=FALSE}
 order_val <- ggplot(data = sales_bycountry_cut, aes(x = reorder(country, -average_order_val), y = average_order_val, fill = country)) +
   geom_bar(stat = "identity") +
-  xlab("Country") +
+  xlab("") +
   ylab("Average order value ($)") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
         legend.position = "none")
@@ -318,6 +322,8 @@ Based on this data, the Czech Republic seems like a market with potential for gr
 # Should the store continue to buy full albums from record labels?
 ## 1. Find out how many sales were for full albums versus individual tracks
 ```{sql, connection=conn, output.var="albums_vs_ind"}
+--This was a particularly difficult part of the exercise and caused much confusion on the discussion forums as well, so I break down the purpose of each step here using comments
+
 --First, get the first track of each invoice and define new table invoice_first_track (ifs)
 WITH invoice_first_track AS
     (
@@ -329,8 +335,8 @@ WITH invoice_first_track AS
     )
 SELECT --then select final columns (including is_album which hasn't been defined yet)
     is_album,
-    COUNT(invoice_id) n_invoices,
-    CAST(count(invoice_id) AS FLOAT) / (SELECT COUNT(*) FROM invoice) percent
+    COUNT(invoice_id) AS n_invoices,
+    CAST(COUNT(invoice_id) AS FLOAT) / (SELECT COUNT(*) FROM invoice) AS percent
 FROM --then define the subset of invoice_first_track to select from
     (
     SELECT
@@ -376,7 +382,7 @@ colour <- brewer.pal(3, "Set3")
 
 pie(albums_vs_ind$percent, labels = c("tracks", "albums"), border = "white", col = colour, main = "Total sales")
 
-# Note: while pie and donut charts are generally a bad idea for data viz because it's difficult to grasp the relative magnitude of each "slice", in this particular case I think it's alright because there are only two categories of sales to represent (tracks and albums) and I find that it actually conveys the relative proportions as well as or better than a bar chart. 
+# Note: while pie and donut charts are generally a bad idea for data viz because it can be difficult to grasp the relative magnitude of each "slice", in this particular case it's alright because there are only two categories of sales to represent (tracks and albums) and it makes a nice change from bar charts. 
 ```
 
 ## Conclusion: 
@@ -390,7 +396,7 @@ Whole albums represent approximately 20% of all sales, which is a large proporti
 
 
 ## 1. Which artist features most often in playlists?
-There are two ways we could define "most often" here - artists with the most tracks contained in playlists, and artists who have at least 1 track in the most playlists. Data for both definitions is gathered here:
+There are two ways we could define "most used" here - artists with the most tracks contained in playlists, and artists who have at least 1 track in the most playlists. Data for both definitions is gathered here:
 ```{sql, connection=conn, output.var="artist_pop"}
 WITH playlist_info AS (
 SELECT p.*, pt.*, t.*, g.*
@@ -438,7 +444,7 @@ artist_top10_tracks <- artist_pop %>% slice_max(order_by = n_tracks, with_ties =
 tracks <- ggplot(data = artist_top10_tracks, aes(x = reorder(artist_name, n_tracks), y = n_tracks)) +
   geom_bar(stat = "identity", fill = "hotpink1") +
   coord_flip() +
-  xlab("Artist") +
+  xlab("") +
   ylab("Number of tracks") 
 
 
@@ -451,7 +457,7 @@ artist_top10_play <- artist_pop %>% slice_max(order_by = n_playlists, with_ties 
 play <- ggplot(data = artist_top10_play, aes(x = reorder(artist_name, n_playlists), y = n_playlists)) +
   geom_bar(stat = "identity", fill = "hotpink2") +
   coord_flip() +
-  xlab("Artist") +
+  xlab("") +
   ylab("Number of playlists") 
 
 
@@ -461,6 +467,7 @@ Note that the list of "Top 10" artists in terms of the number of playlists they 
 
 ## Conclusion:
 Most of the top 10 artists in terms of number of tracks featured in playlists are Rock and Metal artists, while most of those whose popularity is defined as the number of playlists they feature in make classical music. The most popular artist is therefore either Iron Maiden or Eugene Ormandy. 
+Caveat: there are a few artist names which actually contain several different artists, so this data would have to be processed a bit more to reflect the true number of tracks and playlists per individual artist. This is not the point of this exercise though, and each artist name, whether it contains one or more actual artists, is associated with a single artist ID, which suggests that the store is more interested in the performance of each artist as identified by the ID, so I'm not going to do that processing here.
 
 ## 2. How many tracks have been purchased vs not purchased?
 ```{sql, connection=conn, output.var="tracks_purchased"}
@@ -485,7 +492,7 @@ LEFT JOIN purchased_tracks AS pt ON pt.track_id = t.track_id;
 tracks_purchased
 
 ```
-1806 of the 3503 available tracks were purchased, or about 50%. This seems like a relatively low proportion, which may indicate that the range of tracks the store has available doesn't reflect their relative popularity as well as it could. This leads us to the next question:
+1806 of the 3503 available tracks were purchased, or about 50%. This seems a bit low, which may indicate that the range of tracks the store has available doesn't reflect their relative popularity as well as it could. This leads us to the next question:
 
 ## 3. Does the range of tracks in the store reflect their sales popularity?
 ```{sql, connection=conn, output.var="track_pop_range"}
@@ -535,18 +542,19 @@ track_pop_range
 pop_range <- ggplot(data = track_pop_range_long, aes(x = reorder(name, n), y = n, fill = type)) +
   geom_bar(stat = "identity", position = "dodge") +
   coord_flip() +
-  xlab("Genre") +
-  ylab("Number of tracks")
+  xlab("") +
+  ylab("Number of tracks") +
+  theme(legend.position = c(0.8, 0.3))
 
 pop_range
 
 ```
 ```{r plot prop_sold, message=FALSE, warning=FALSE}
-pop_range <- ggplot(data = track_pop_range, aes(x = reorder(name, prop_sold), y = prop_sold, fill = name)) +
+pop_range <- ggplot(data = track_pop_range, aes(x = reorder(name, prop_sold), y = prop_sold)) +
   geom_bar(stat = "identity") +
   coord_flip() +
-  xlab("Genre") +
-  ylab("Percent available tracks sold") +
+  xlab("") +
+  ylab("Available tracks sold") +
   scale_y_continuous(labels = scales::percent) +
   theme(legend.position = "none")
 
@@ -608,7 +616,7 @@ Plot the resulting data:
 
 type <- ggplot(data = media_type_effect, aes(x = reorder(cat, -n_sold), y = n_sold)) +
   geom_bar(stat = "identity", fill = "darkviolet") +
-  xlab("Media type") +
+  xlab("") +
   ylab("Number of tracks sold")
 
 type
@@ -656,19 +664,39 @@ library(stats)
 library(sjPlot)
 
 t1 <- glm(data = media_type_detailed, sold ~ cat, family = "binomial")
-summary(t1)
+#summary(t1)
 
 t2 <- glm(data = media_type_detailed, sold ~ cat + media_type, family = "binomial")
 summary(t2)
 
 anova(t1, t2, test = "Chisq") # does t1 fit significantly better than t2?
 
+
 tab_model(t2)
+
 
 ```
 Note: the warning we get with the best-fitting model (which includes both general media type, and media sub-type as predictors) means that there was not enough data corresponding to `Protected MPEG-4 video file` to evaluate how well this sub-type predicted the relative odds of a track being sold. 
 
-This makes sense, because only 3 such tracks were sold. This is only a toy example so I will leave it at that as this does not affect the general fit of the model per se (though it does make it less likely to perform well as a predictive model for new data). Otherwise it would be a good idea to try using an *exact* logistic regression, which works better than regular logistic regression when sample sizes are small and/or some cells have no observations. 
+This makes sense, because only 3 such tracks were sold. It is probably more appropriate to use a penalized likelihood logistic (or Firth-Logistic) regression which can handle such unbalanced data better than the typical version based on maximum likelihood estimation.
+
+```{r firths}
+library(logistf)
+m_pen <- logistf(data = media_type_detailed, sold ~ media_type )
+summary(m_pen)
+exp(coef(m_pen)) # get odds ratios
+
+m_pen_cat <- logistf(data = media_type_detailed, sold ~ cat)
+summary(m_pen_cat)
+exp(coef(m_pen_cat))
+
+# note that a model containing both predictors is difficult to generate with this process: R throws a warning that the resulting p-values are unreliable because the maximum number of iterations for the model estimation has been exceeded. Therefore, let us consider each model individually for the purposes of this toy example (in real life we would need to take steps to actually resolve this issue).
+
+```
+
+```{r disconnect db}
+dbDisconnect(conn)
+```
 
 ## Conclusion:
-Our model indicates that media type does affect whether a track gets sold (protected media types get sold less), but the sub-types have very little effect on track popularity (the protected AAC type seems to increase the odds of a track being sold, but this may not be a reliable estimate given that the model is rank-deficient due to insufficient data). Non-protected media types are therefore more popular.
+Our models indicate that media type does affect whether a track gets sold (protected media types get sold less), but it appears that the sub-types have little significant effect on track popularity (the protected MPEG-4 type seems to decrease the odds of a track being sold compared to the other types). Non-protected media types are therefore more popular.
